feat: implements eslint and webpack config for TS

--- a/news-api/.eslintrc.json
+++ b/news-api/.eslintrc.json
@@ -1,6 +1,8 @@
 {
-    "plugins": ["prettier", "import"],
+    "plugins": ["prettier", "import", "@typescript-eslint"],
     "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended",
         "prettier"
     ],
@@ -16,6 +18,8 @@
     "rules": {
         "no-debugger": "off",
         "no-console": 0,
-        "class-methods-use-this": "off"
-    }
+        "class-methods-use-this": "off",
+        "@typescript-eslint/no-explicit-any": 2
+    },
+  "parser": "@typescript-eslint/parser"
 }
