--- a/news-api/package.json
+++ b/news-api/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
     "lint": "eslint . --ext .ts",
+    "lintFix": "eslint . --ext .ts --fix",
     "deploy": "npx gh-pages -d ./dist -e news-api"
   },
   "repository": {
