--- a/news-api/.env
+++ b/news-api/.env
@@ -1,3 +1,3 @@
 ; API_URL=https://newsapi.org/v2/
-API_URL=https://rss-news-api.onrender.com/
-API_KEY=94432d5765604c7d9b8f23e103218d2a
+; API_URL='https://rss-news-api.onrender.com/'
+API_KEY='94432d5765604c7d9b8f23e103218d2a'
