feat: rename controller.js to controller.ts. Add endpoint enum

--- a/news-api/.env
+++ b/news-api/.env
@@ -1,3 +1,10 @@
-; API_URL=https://newsapi.org/v2/
+# original
+API_URL=https://newsapi.org/v2/
+# dev
+; API_URL=https://rss-news-api.onrender.com/mocks/
+# deploy
+; API_URL=https://rss-news-api.onrender.com/
 ; API_URL='https://rss-news-api.onrender.com/'
+
+# apiKey
 API_KEY='94432d5765604c7d9b8f23e103218d2a'
