feat: add button container and style for it

--- a/news-api/.env
+++ b/news-api/.env
@@ -7,4 +7,7 @@ API_URL=https://newsapi.org/v2/
 ; API_URL='https://rss-news-api.onrender.com/'
 
 # apiKey
-API_KEY='94432d5765604c7d9b8f23e103218d2a'
+; qweedccvb@gmail.com
+; API_KEY='94432d5765604c7d9b8f23e103218d2a'
+; wevbr3bberw43@gmail.com
+API_KEY='14e08ae11ad84352ae5c497f17a6ecc0'
