refactor: change logo color

--- a/news-api/.env
+++ b/news-api/.env
@@ -1,9 +1,9 @@
 # original
-API_URL=https://newsapi.org/v2/
+; API_URL=https://newsapi.org/v2/
 # dev
 ; API_URL=https://rss-news-api.onrender.com/mocks/
 # deploy
-; API_URL=https://rss-news-api.onrender.com/
+API_URL=https://rss-news-api.onrender.com/
 ; API_URL='https://rss-news-api.onrender.com/'
 
 # apiKey
