--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     }
   },
   "validate-branch-name": {
-    "pattern": "rss-puzzle",
+    "pattern": "RSS-PZ-[0-9]{2}-[a-zA-Z]+",
     "error": "Branch name must follow the pattern RSS-PZ-XX"
   },
   "prepare": "husky install"
