--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
     "style": "sass --watch src/scss/style.scss src/scss/style.css",
-    "deploy": "npx gh-pages -d ./dist -e rss-puzzle",
+    "deploy": "npx gh-pages -d ./dist -e rss-puzzlen",
     "prepare": "husky",
     "format": "prettier --write .",
     "ci:format": "prettier --check .",
